[package]
name = "funeral"
version = "0.1.0"
authors = ["Arian Mirahmadi <mirarianmir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
json = "0.12.4"
indicatif = "0.16.2"
console = "0.15.0"
num = "0.4.0"